tests/NormalTests/paczka1/small_fuzzy/72224667.err
Error in line 3: hAgeWblew A258 39,0
Error in line 4: hAgeWblew A444 44,8
